fix prev spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1734,19 +1734,19 @@ img {
 }
 
 #plant-ribbon-1 {
-    left: 180px
+    left: 190px
 }
 
 #plant-ribbon-2 {
-    left: 350px
+    left: 360px
 }
 
 #plant-ribbon-3 {
-    left: 566px
+    left: 550px
 }
 
 #plant-ribbon-4 {
-    left: 740px
+    left: 735px
 }
 
 .plant-ribbon-left {
